# epistemic-factkg-benchmark

./: .gitignore  INSTRUCTIONS.md  Justfile  LICENSE  README.md  pyproject.toml
analysis/: aggregate.py  midtier_eval.py
benchmark/: build_corrected_split.py  build_expanded_split.py  run_gnn_eval.py  run_logreg_test.py  run_trust_isolation_test.py
benchmark/data/: corrected_split.jsonl
data/: expanded_split.jsonl  registry_with_nm.jsonl
data/splits/: test_indices.json  train_indices.json  val_indices.json
docs/: index.html
paper/: generate_figures.py  numbers.tex  paper.tex
results/: corrected_split_design.md  diagnostics_d1_d3.md  gnn_results.jsonl  logreg_results.json  midtier_results.json  results.jsonl  summary.md
verification/: compare.py
verification/diagnostics/: generate.py  reference.json
verification/figures/: generate.py  reference.json
verification/reproducibility/: generate.py  reference.json
verification/split_design/: generate.py  reference.json
