[project]
name = "epistemic-factkg-benchmark"
version = "3.0.0"
description = "Source-trust-isolating benchmark for fact verification"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn",
    "sentence-transformers",
    "numpy",
    "matplotlib",
]

[project.optional-dependencies]
pdf = [
    "pylatexenc",    # LaTeX string parsing and encoding utilities
    "Pillow",        # Image processing for figures embedded in PDF
    "pypdf",         # PDF reading/merging/inspection
]

[project.urls]
"System repo" = "https://github.com/karkid/epistemic-factkg"
"Benchmark repo" = "https://github.com/AISWARYA-NANDAKUMAR/epistemic-factkg-benchmark"

[tool.uv]
# PDF compilation requires latexmk + a LaTeX distribution (TeX Live / MacTeX).
# Install Python PDF utils with: uv sync --extra pdf
# Then compile: just pdf
